# msx-yamanooto-npackr

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md
.github/workflows/: release.yml
catalog/: konami_catalog.toml
docs/: HANDOFF.md  METAL_GEAR_SRAM_COMPAT.md  MG1_SAVES.md  SCC_ALIGNMENT.md
examples/: sample.toml
gui-rs/: Cargo.toml
gui-rs/examples/: mg_parity.rs
gui-rs/src/: convert.rs  main.rs  mapper.rs  pack.rs  scc_patch.rs  softdb.rs
launcher/: gm2_part1.asm  gm2_part2.asm  launcher.asm  mg1_driver.asm  mg1_engine.asm  mg1_shim.asm  mg2_driver.asm  mg2_engine.asm  sram_engine_gm2.asm
packager/: ascii16_to_k5.py  ascii8_to_k5.py  ascii8sram_to_k5.py  font_to_bin.py  gm2_to_yamanooto.py  mg1_to_yamanooto.py  mg2_to_yamanooto.py  scc_patch.py  yamanooto_pack.py
probe/: .gitignore  EXPECTED.md  k4probe.asm  k4probe.toml  k4probe_engine.asm  make_probe_rom.py
testroms/: build_sram_test.sh  sram_test.asm
