[package]
name = "yamanooto-gui"
version = "1.7.1"
edition = "2021"
description = "GUI for MSX Yamanooto nPackR. Drop ROMs, pick flash size + marquee, build image."
authors = ["Antxiko Gorjon <antxiko@gmail.com>"]
license = "GPL-3.0-or-later"

[[bin]]
name = "yamanooto-gui"
path = "src/main.rs"

[dependencies]
# wgpu backend (DX12 -> DX11 -> Vulkan on Windows): the default glow backend
# needs OpenGL 2.0+ and dies silently on RDP / VMs / old GPUs.
# wayland/x11 give winit its Linux window backends — with glow they came in
# transitively via glutin's defaults, with wgpu they must be explicit or the
# Linux build fails (winit E0282 in the release workflow).
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.28"
sha1 = "0.10"
quick-xml = "0.36"
rfd = "0.14"           # native file dialogs
serde = { version = "1", features = ["derive"] }   # project file (TOML)
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
